--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -9,6 +9,14 @@
     
 }
 
+@media screen and (max-width: 300px) {
+    main.container-fluid,.container{
+      max-width: fit-content;
+    }
+
+    
+}
+
 
 
 
